platform/observability/prometheus/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-httproute
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prometheus.homelab.internal
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: kube-system
  hostnames:
    - prometheus.homelab.internal
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: prometheus-community-kube-prometheus
      port: 9090
